# Template

./: CMakeLists.txt  README.md
src/: Template.cpp  main.cpp  template.cpp
src/include/: Template.h
unit-tests/: CMakeLists.txt  TemplateUnit.cpp  main.cpp
